test/tests/stages/15_arrays_and_pointer_arithmetic/invalid_types/extra_credit/prefix_decr_nested_array.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[43]:
  int
  identifier(main)
  (
  void
  )
  {
  int
  identifier(arr)
  [
  const int(2)
  ]
  [
  const int(3)
  ]
  =
  {
  {
  const int(1)
  ,
  const int(2)
  ,
  const int(3)
  }
  ,
  {
  const int(4)
  ,
  const int(5)
  ,
  const int(6)
  }
  }
  ;
  --
  identifier(arr)
  [
  const int(2)
  ]
  ;
  return
  const int(0)
  ;
  }
